fix: display issue on small screens (#9190)

--- a/apps/helpdesk/src/pages/common/draftjs/plugins/toolbar/components/WorkflowVariableDropdown.less
+++ b/apps/helpdesk/src/pages/common/draftjs/plugins/toolbar/components/WorkflowVariableDropdown.less
@@ -4,6 +4,9 @@
     .dropdown {
         min-width: 384px !important;
         max-width: 400px;
+        min-height: 200px;
+        max-height: min(420px, 80vh);
+        height: 100%;
     }
 
     .noVariablesMessage {
